watershed-kernel/tests/compile_fail/construct_validated_plan_directly.stderr
error[E0451]: fields `intent`, `claims` and `max_retries` of struct `Validated` are private
 --> $WORKSPACE/tests/compile_fail/construct_validated_plan_directly.rs
  |
  |     let validated = Validated {
  |                     --------- in this type
  |         intent: RecoveredIntent {
  |         ^^^^^^ private field
...
  |         claims: Vec::new(),
  |         ^^^^^^ private field
  |         max_retries: None,
  |         ^^^^^^^^^^^ private field

error[E0451]: field `state` of struct `Plan` is private
 --> $WORKSPACE/tests/compile_fail/construct_validated_plan_directly.rs
  |
  |     let _plan = Plan::<Validated> {
  |                 ----------------- in this type
  |         state: validated,
  |         ^^^^^ private field
